--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,13 +31,15 @@ dist.dir=dist
 dist.jar=${dist.dir}/software_project.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.jcalendar-1.4.jar=E:\\netbeans12\\New folder\\lib\\jcalendar-1.4.jar
 file.reference.JCalendar.jar=D:\\Univercity Subjecs\\2nd year\\summer\\DataBase\\Project\\Project\\ONEWAY PROJECT\\dist\\JCalendar.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.JCalendar.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
