--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=E:\\netbeans12\\New folder\\lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\Yousef Hanbali\\Desktop\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\Msys\\Downloads\\jcalendar-1.4.jar
 file.reference.JCalendar.jar=D:\\Univercity Subjecs\\2nd year\\summer\\DataBase\\Project\\Project\\ONEWAY PROJECT\\dist\\JCalendar.jar
 file.reference.mysql-connector-java-8.0.27.jar=C:\\Users\\Yousef Hanbali\\Desktop\\mysql-connector-java-8.0.27.jar
 includes=**
@@ -43,7 +44,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mysql-connector-java-8.0.27.jar}
+    ${file.reference.mysql-connector-java-8.0.27.jar}:\
+    ${file.reference.jcalendar-1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
